--- a/src/apps/annotation-image/IIIF/IIIFThumbnailStrip.css
+++ b/src/apps/annotation-image/IIIF/IIIFThumbnailStrip.css
@@ -21,16 +21,21 @@
 }
 
 .ia-thumbnail-strip .thumbnail {
-  padding: 5px;
+  padding: 3px;
+  border-radius: calc(var(--border-radius) + 5px);
+}
+
+.ia-thumbnail-strip .thumbnail-strip-item.selected .thumbnail {
+  background-color: var(--brighter-blue);
 }
 
 .ia-thumbnail-strip .thumbnail:hover {
   background-color: var(--gray-300);
-  border-radius: calc(var(--border-radius) + 2px);
 }
 
 .ia-thumbnail-strip .thumbnail img {
-  border-radius: var(--border-radius);
+  border: 2px solid #fff;
+  border-radius: calc(var(--border-radius) + 3px);
   display: block;
   height: 120px;
   object-fit: cover;
