--- a/src/components/AnnotationDesktop/ErrorBadge/ErrorBadge.css
+++ b/src/components/AnnotationDesktop/ErrorBadge/ErrorBadge.css
@@ -9,6 +9,8 @@
   margin-left: 10px;
   font-size: var(--font-tiny);
   padding: 1px 12px;
+  position: relative;
+  z-index: 999;
 }
 
 .anno-error-badge button.anno-error-refresh.link {
@@ -17,4 +19,14 @@
   font-weight: 500;
   text-decoration: underline;
   white-space: nowrap;
+}
+
+.anno-error-clicktrap {
+  background-color: rgba(255, 255, 255, 0.65);
+  position: fixed;
+  top: 0;
+  left: 0; 
+  width: 100vw;
+  height: 100vh;
+  z-index: 998;
 }
