--- a/src/components/Annotation/ReplyForm/MobileFallback.css
+++ b/src/components/Annotation/ReplyForm/MobileFallback.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   height: 100%;
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 999;
 }
 
 .mobile-reply-form-close {
@@ -21,6 +21,7 @@
   font-size: 1.2em;
   height: 100%;
   padding: 2.5%;
+  resize: none;
   width: 100%;
 }
 
