--- a/src/components/Annotation/ReplyForm/MobileFallback.css
+++ b/src/components/Annotation/ReplyForm/MobileFallback.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   height: 100%;
   left: 0;
-  position: sticky;
+  position: fixed;
   top: 0;
   width: 100%;
   z-index: 999;
