--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 <html lang={getLangFromUrl(Astro.url)}>
   <head>
     <meta charset='UTF-8' />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, interactive-widget=resizes-content">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, interactive-widget=resizes-content">
     <meta name='generator' content={Astro.generator} />
     <link rel="icon" type="image/x-icon" href={favicon}>
     <title>{title}</title>
