--- a/src/components/RichTextEditor/RichTextEditor.css
+++ b/src/components/RichTextEditor/RichTextEditor.css
@@ -1,3 +1,10 @@
+.anno-desktop .ql-snow.ql-toolbar button {
+  align-items: center;
+  box-shadow: none;
+  display: inline-flex;
+  justify-content: center;
+}
+
 /*!
  * Quill Editor v1.3.7
  * https://quilljs.com/
