--- a/src/themes/default/form/input.css
+++ b/src/themes/default/form/input.css
@@ -8,6 +8,10 @@ input, textarea {
   transition: box-shadow .2s ease-in-out, border-color .2s ease-in-out;
 }
 
+input:disabled {
+  color: var(--font-light);
+}
+
 input:focus, textarea:focus {
   border-color: var(--input-focus-border-color);
   box-shadow: 0 0 0 1px var(--input-focus-border-color);
