--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -110,10 +110,11 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
   }
 
   header {
+    align-items: center;
     border-bottom: 1px solid var(--gray-200);
     box-sizing: border-box;
     display: flex;
-    align-items: center;
+    flex: 0 0 auto;
     height: 50px;
     padding: 0 40px;
   }
@@ -123,7 +124,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
     display: flex;
     flex-grow: 1;
     margin: 0 auto;
-    max-width: 80rem;
+    max-width: 52rem;
     padding: 0;
     position: relative;
     width: 100%;
