--- a/src/pages/[lang]/projects/[project]/plugins.astro
+++ b/src/pages/[lang]/projects/[project]/plugins.astro
@@ -3,7 +3,9 @@ import ProjectLayout from '@layouts/project/ProjectLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getMyProfile } from '@backend/crud';
 import { getLangFromUrl } from '@i18n';
-import { getProjectExtended } from '@backend/helpers';
+import { getInstalledPlugins, getProjectExtended } from '@backend/helpers';
+import { ProjectPlugins } from '@apps/project-plugins';
+import PluginRegistry from '@components/Plugins/PluginRegistry';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -28,13 +30,17 @@ if (project.error || !project.data) {
     statusText: 'Not Found' 
   }); 
 }
+
+const installedPlugins = await getInstalledPlugins(supabase, projectId as string);
+if (installedPlugins.error || !installedPlugins.data) {
+  const error = await fetch(`${Astro.url}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
 ---
 <ProjectLayout active="Add Ons" user={profile.data} project={project.data}>
-  <h1>Add Ons</h1>
+  <ProjectPlugins 
+    client:load
+    project={project.data}
+    availablePlugins={PluginRegistry.listAvailablePlugins()} 
+    installedPlugins={PluginRegistry.resolvePlugins(installedPlugins.data)} />
 </ProjectLayout>
-
-<style>
-  h1 {
-    padding-left: 40px !important;
-  }
-</style>
