--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -12,26 +12,44 @@
 }
 
 .document-card-body {
+  box-sizing: border-box;
   align-items: center;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
   color: var(--gray-300);
   display: flex;
-  height: 160px;
+  height: 200px;
+  width: 200px;
   justify-content: center;
 }
 
 .document-card-footer {
+  box-sizing: border-box;
   display: flex;
-  justify-content: flex-end;
-  padding: 8px;
+  height: 56px;
+  width: 200px;
+  flex-wrap: wrap;
+  padding-left: 8px;
+  position: relative;
+  background-color: var(--gray-200);
 }
 
-.document-card-container h1 {
+.document-card-actions {
+  position: absolute;
+  top: 10px;
+  right: 1px;
+}
+
+.document-card-name {
   font-family: Inter;
-  font-size: var(--font-small);
-  margin: 0;
-  padding: 0.6em 0;
-  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  width: 90%;
+  display: -webkit-box;
+  line-clamp: 2;
+  overflow: hidden;
+  overflow-wrap: anywhere;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .document-card-container h1 a,
