--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -25,25 +25,7 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 <!DOCTYPE html>
 <html lang={getLangFromUrl(Astro.url)}>
   <head>
-    <!-- Google tag (gtag.js) -->
-    <script
-      type='text/partytown'
-      async
-      src=`https://www.googletagmanager.com/gtag/js?id=${import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG_ID}`
-    ></script>
-    <script type='text/partytown'>
-      // @ts-ignore
-      window.dataLayer = window.dataLayer || [];
-
-      function gtag() {
-        // @ts-ignore
-        dataLayer.push(arguments);
-      }
-      // @ts-ignore
-      gtag('js', new Date());
-      // @ts-ignore
-      gtag('config', `${import.meta.env.PUBLIC_GOOGLE_ANALYTICS_TAG_ID}`);
-    </script>
+    <!-- HEAD-DYNAMIC-SCRIPT -->
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <meta name='generator' content={Astro.generator} />
