--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -6,6 +6,7 @@ import type { LoginMethod } from '../../Types';
 import config from '../../config.json';
 
 const methods = config.authentication.methods;
+const splashURL = config.branding.home_banner;
 ---
 
 <LoginLayout title=''>
@@ -14,6 +15,7 @@ const methods = config.authentication.methods;
       i18n={getTranslations(Astro.request, 'auth-login')}
       methods={methods as LoginMethod[]}
       client:only='react'
+      splashURL={splashURL}
     />
   </div>
 </LoginLayout>;
