CSS tweaks + refactoring: moving appearance provider into SupabasePlugin component

--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -21,6 +21,11 @@ html, body {
 
 .ta-desktop main .r6o-annotatable .r6o-span-highlight-layer {
   mix-blend-mode: multiply;
+  z-index: 5;
+}
+
+.ta-desktop main .r6o-annotatable .r6o-highlight-layer.presence {
+  z-index: 10;
 }
 
 .ta-desktop main .ta-annotated-text-container {
