Annotation view presence stack: avatars now have rings with global author color

--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -167,8 +167,12 @@
 }
 
 .anno-menubar .avatar {
-  height: 30px;
-  width: 30px;
+  height: 36px;
+  width: 36px;
+}
+
+.anno-menubar .avatar .avatar-fallback {
+  font-size: 11.5px;
 }
 
 .anno-menubar .presence-stack .avatar {
