--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -173,7 +173,7 @@
 
 html,
 body {
-  background-color: var(--gray-100);
+  background-color: white;
   color: var(--gray-900);
   font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 16px;
