--- a/src/apps/project-collaboration/ProjectCollaboration.css
+++ b/src/apps/project-collaboration/ProjectCollaboration.css
@@ -1,6 +1,8 @@
 .project-collaboration {
   padding: 20px 40px;
   width: 100%;
+  margin-top: 100px;
+  box-sizing: border-box;
 }
 
 .project-collaboration button.select-trigger {
