--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -5,6 +5,7 @@
   padding: 20px 40px;
   position: relative;
   background-color: white;
+  margin-top: 240px;
 }
 
 .project-home h1 {
@@ -121,4 +122,14 @@
   font-size: var(--font-tiny);
   margin: 0;
   letter-spacing: 0.01ch;
+}
+
+.project-home-document-header-bar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
 }
