--- a/src/pages/[lang]/projects/[project]/collaboration.astro
+++ b/src/pages/[lang]/projects/[project]/collaboration.astro
@@ -1,45 +1,51 @@
 ---
-import ProjectLayout from '@layouts/project/ProjectLayout.astro';
+import BaseLayout from '@layouts/BaseLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { listPendingInvitations, getMyProfile } from '@backend/crud';
 import { getProjectExtended } from '@backend/helpers';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { ProjectCollaboration } from '@apps/project-collaboration';
+import { listMyProjectsExtended } from '@backend/helpers';
 
 const lang = getLangFromUrl(Astro.url);
 
 const i18n = getTranslations(Astro.request, 'project-collaboration');
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase)
-  return Astro.redirect(`/${lang}/sign-in`);
+if (!supabase) return Astro.redirect(`/${lang}/sign-in`);
 
 const projectId = Astro.params.project;
 
 const profile = await getMyProfile(supabase);
-if (profile.error || !profile.data) { 
+if (profile.error || !profile.data) {
   const error = await fetch(`${Astro.url}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  return new Response(error.body, { headers: error.headers, status: 500 });
 }
 
 const project = await getProjectExtended(supabase, projectId as string);
 
 const invitations = await listPendingInvitations(supabase, projectId as string);
 
-if (project.error || invitations.error) { 
+if (project.error || invitations.error) {
   const error = await fetch(`${Astro.url}/404`);
   return new Response(error.body, {
     headers: { 'Content-Type': 'text/html;charset=utf-8' },
-    status: 404, 
-    statusText: 'Not Found' 
-  }); 
+    status: 404,
+    statusText: 'Not Found',
+  });
 }
+
+const projects = await listMyProjectsExtended(supabase);
 ---
-<ProjectLayout active="Collaboration" user={profile.data} project={project.data}>
+
+<BaseLayout title='Team'>
   <ProjectCollaboration
     client:load
     i18n={i18n}
     me={profile.data}
     project={project.data}
-    invitations={invitations.data} /> 
-</ProjectLayout>
+    invitations={invitations.data}
+    projects={projects.data}
+    user={profile.data}
+  />
+</BaseLayout>
