--- a/src/pages/[lang]/projects/[project]/assignments/index.astro
+++ b/src/pages/[lang]/projects/[project]/assignments/index.astro
@@ -47,3 +47,4 @@ const i18n = getTranslations(Astro.request, 'project-assignments');
     documents={documents.data}
   />
 </ProjectLayout>
+@apps/project-home/AssignmentsView
