--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -131,5 +131,5 @@
   height: 80px;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 3px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.15);
 }
