--- a/src/apps/project-home/AssignmentsView/AssignmentsView.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentsView.css
@@ -1,4 +1,21 @@
 .project-assignments {
-  padding: 20px 40px;
   width: 100%;
+}
+
+.project-assignments-document-header-bar {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.15);
+}
+
+.project-assignments-presentation-pane {
+  display: flex;
+  flex-direction: row;
+  padding-top: 25px;
+  position: relative;
+  align-items: stretch;
 }
