--- a/src/apps/project-home/AssignmentsView/AssignmentsList/AssignmentsList.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentsList/AssignmentsList.css
@@ -1,7 +1,12 @@
+.assignment-list-list {
+  max-height: 440px;
+  overflow-y: auto;
+}
+
 .assignments-list-item {
   width: 404px;
   height: 80px;
-  border-bottom: 1px solid var(--gray-100);
+  border-bottom: 1px solid var(--gray-200);
   padding-left: 30px;
   padding-top: 30px;
   cursor: pointer;
@@ -10,7 +15,7 @@
 .assignments-list-item-active {
   width: 404px;
   height: 80px;
-  border: 1px solid var(--gray-200);
+  border: 1px solid var(--gray-300);
   background-color: var(--gray-100);
   padding-left: 30px;
   padding-top: 30px;
