--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -1,9 +1,9 @@
 .annotation {
   background-color: #fff;
+  border: 1px solid var(--gray-300);
   border-radius: 5px;
   overflow: hidden;
   position: relative;
-  width: 340px;
 }
 
 .annotation ul {
@@ -25,7 +25,7 @@
 }
 
 .annotation:not(.note)::after {
-  background-color: var(--c-blue);
+  background-color: var(--card-border);
   bottom: 0;
   content: '';
   left: 0;
