--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -119,6 +119,7 @@
   --orange: #e9b44a;
 
   --gray-900: #202125;
+  --gray-800: #475569;
   --gray-700: #6f747c;
   --gray-600: #818992;
   --gray-500: #93989f;
