Fixes to author avatar state, list style, Quill editor wrapper

--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -11,7 +11,7 @@
 }
 
 .anno-drawer-panel.annotation-list > ul > li {
-  margin: 8px 0;
+  margin: 10px 0 25px 0;
 }
 
 .anno-drawer-panel.annotation-list .annotation-card {
