--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -18,6 +18,7 @@
 
 .annotation.readonly {
   background-color: var(--gray-200);
+  border: 1px solid var(--gray-400);
 }
 
 .annotation.note {
@@ -50,11 +51,6 @@
   align-items: center;
   display: flex;
   gap: 0.5rem;
-}
-
-.annotation .private-avatar .avatar-inner {
-  background-color: var(--gray-800);
-  color: #fff;
 }
 
 .annotation .annotation-toolbar-wrapper {
