--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -12,6 +12,10 @@
   padding: 0;
 }
 
+.annotation ul li {
+  overflow: hidden;
+}
+
 .annotation > ul > li:not(.interstitial-wrapper) + li {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
