--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -123,7 +123,7 @@
   --gray-700: #6f747c;
   --gray-600: #818992;
   --gray-500: #93989f;
-  --gray-400: #cbd0d7;
+  --gray-400: #d4d8de;
   --gray-300: #dadee2;
   --gray-200: #e2e5e9;
   --gray-100: #f3f4f7;
