--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -98,11 +98,18 @@
   padding: 0 12px 5px 12px;
 }
 
+.annotation .annotation-footer-left {
+  display: flex;
+  flex-wrap: wrap;;
+  gap: 0.5rem;
+}
+
 .annotation button.save {
   all: unset;
   background-color: var(--bright-blue);
   color: #fff;
   cursor: pointer;
+  flex: 0 0 auto;
 }
 
 .annotation button.save svg {
