--- a/src/components/Annotation/AnnotationCard.css
+++ b/src/components/Annotation/AnnotationCard.css
@@ -4,6 +4,7 @@
   border-radius: 5px;
   overflow: hidden;
   position: relative;
+  transition: all 120ms;
 }
 
 .annotation ul {
@@ -31,6 +32,11 @@
 
 .annotation.note.readonly {
   background-color: #e1d7b4;
+}
+
+.annotation.selected {
+  box-shadow: 0 0 0 3px var(--button-focus-outline-color);
+  transform: translateX(-5px);
 }
 
 .annotation:not(.note)::after {
