--- a/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
+++ b/src/components/AnnotationDesktop/AnnotationPopup/AnnotationPopup.css
@@ -1,4 +1,5 @@
 .annotation-popup {
+  animation:popupFadeIn 100ms linear;
   border-radius: 5px;
   box-shadow:
     1px 2px 4px rgba(0, 0, 0, 0.02),
@@ -8,4 +9,13 @@
   font-family: Inter;
   width: 340px;
   z-index: 9999;
+}
+
+@keyframes popupFadeIn  {
+  0% {
+    opacity:0
+  }
+  100% {
+    opacity:1;
+  }
 }
