--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -49,6 +49,8 @@ const invitations = await listMyInvites(supabase);
 const projects = await listMyProjectsExtended(supabase);
 
 const availableLayers = await getAvailableLayers(supabase, projectId as string);
+
+console.log('Available layers: ', availableLayers);
 ---
 
 <BaseLayout title='Projects Home'>
