--- a/src/components/AnnotationDesktop/DocumentNotes/DocumentNotesList/DocumentNotesList.css
+++ b/src/components/AnnotationDesktop/DocumentNotes/DocumentNotesList/DocumentNotesList.css
@@ -9,6 +9,10 @@
   padding: 0;
 }
 
+.anno-sidepanel.document-notes-list > ul > li {
+  margin: 10px 0;
+}
+
 .anno-sidepanel.document-notes-list .annotation-card:not(.private) {
   background-color: #fff9a8;
   border-color: #ffee05;
