Work in progress

--- a/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
+++ b/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
@@ -1,6 +1,4 @@
-.ta-drawer.ta-right-drawer {
-  background-color: var(--gray-100);
-  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.28);
+.ta-drawer.ta-left-drawer {
   flex-grow: 0;   
   flex-shrink: 0; 
   flex-basis: 0;
@@ -9,9 +7,12 @@
   z-index: 9;
 }
 
-.ta-right-drawer aside {
+.ta-drawer.ta-left-drawer.open {
+  flex-basis: 320px;
+}
+
+.ta-left-drawer aside {
   position: absolute;
   top: 5px;
   left: 0;
-  width: 380px;
 }
