--- a/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
+++ b/src/apps/annotation-text/LeftDrawer/LeftDrawer.css
@@ -7,12 +7,9 @@
   z-index: 9;
 }
 
-.ta-drawer.ta-left-drawer.open {
-  flex-basis: 320px;
-}
-
 .ta-left-drawer aside {
   position: absolute;
   top: 5px;
   left: 0;
+  width: 280px;
 }
