--- a/src/components/AnnotationDesktop/FilterPanel/FilterPanel.css
+++ b/src/components/AnnotationDesktop/FilterPanel/FilterPanel.css
@@ -1,5 +1,5 @@
 .anno-drawer-panel.filter-panel {
-  font-size: var(--font-small);
+  font-size: var(--font-tiny);
   padding: 10px 20px;
 }
 
@@ -16,8 +16,26 @@
   align-items: center;
   display: flex;
   font-family: Inter;
-  font-size: var(--font-small);
+  font-size: var(--font-tiny);
   gap: 0.5rem;
   margin: 0.25rem 0 1rem 0;
+}
+
+.anno-drawer-panel.filter-panel button.toggle {
+  all: unset;
+  background-color: var(--gray-300);
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  line-height: 100%;
+  padding: 0.5rem 0.625rem;
+}
+
+.anno-drawer-panel.filter-panel button.toggle[data-state="on"] {
+  background-color: var(--bright-blue);
+  color: #fff;
+}
+
+.anno-drawer-panel.filter-panel  button.toggle:focus-visible {
+  box-shadow: 0 0 0 2px black;
 }
 
