--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -94,6 +94,7 @@ main.list-open .content-wrapper .tei {
 .ta-drawer {
   overflow-y: auto;
   pointer-events: auto;
+  position: relative;
   z-index: 1;
 }
 
